kubernetes-app-config-template.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: @@ARTIFACT_ID@@
  namespace: @@NAMESPACE@@
spec:
  replicas: 1
  selector:
    matchLabels:
      app: @@ARTIFACT_ID@@
  template:
    metadata:
      labels:
        app: @@ARTIFACT_ID@@
    spec:
      containers:
      - name: @@ARTIFACT_ID@@
        image: @@IMAGE_TAG@@
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8090
          initialDelaySeconds: 20
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8090
          initialDelaySeconds: 20
          timeoutSeconds: 2
        ports:
        - containerPort: 8090
---
kind: Service
apiVersion: v1
metadata:
  name: @@ARTIFACT_ID@@-svc
  namespace: @@NAMESPACE@@
spec:
  ports:
  - name: http
    port: @@EXTERNAL_PORT@@
    targetPort: 8090
  selector:
    app: @@ARTIFACT_ID@@
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: @@ARTIFACT_ID@@-ing
  namespace: @@NAMESPACE@@
  annotations:
    kubernetes.io/ingress.class: "nginx"
# Added 9/29/2018. From looking at the nginx-ingress-controller docker registry example.
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
# Commented out this on 9/29/2018 - see items above. 
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/proxy-body-size: 100m
#    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  rules:
  - host:
      cbdemo.palepuweb.org
    http:
      paths:
      - path: /
        backend:
          serviceName: @@ARTIFACT_ID@@-svc
          servicePort: @@EXTERNAL_PORT@@
